--- a/wally.toml
+++ b/wally.toml
@@ -10,10 +10,10 @@ description = "L4D2-style cooperative horror game for Roblox"
 Promise = "evaera/promise@4.0.0"
 Signal = "sleitnick/signal@1.5.0"
 Trove = "sleitnick/trove@1.1.0"
-TableUtil = "sleitnick/tableutil@1.2.0"
+TableUtil = "sleitnick/table-util@1.2.1"
 
 [server-dependencies]
-ProfileStore = "madstudios/profilestore@1.0.0"
+ProfileStore = "lm-loleris/profilestore@1.0.3"
 
 [dev-dependencies]
 TestEZ = "roblox/testez@0.4.1"
